[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
# dashmap = "5.5.3"
env_logger = "0.11.1"
futures-util = "0.3.30"
indexmap = "2.2.5"
log = "0.4.20"
# rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
# uuid = { version = "1.7.0", features = ["v4", "serde"] }
